--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-h5py==3.1.0
-nnAudio==0.2.6
+h5py>=3.5.0
+nnAudio>=0.2.6
 numpy==1.19.5
-pandas==1.2.4
-Pillow==8.2.0
-scikit-learn==1.0
-scipy==1.7.1
-tensorflow==2.6.1
+pandas>=1.2.4
+Pillow>=8.2.0
+scikit-learn>=1.0
+scipy>=1.7.1
+tensorflow>=2.6.1
